populating the html dynamically with javascript

--- a/09-menu/starter/main.css
+++ b/09-menu/starter/main.css
@@ -300,6 +300,7 @@ Menu
 .photo {
     height: 200px;
     border-radius: var(--borderRadius);
+    border: 0.25rem solid var(--primary-500);
 }
 
 .item-info header {
